@@ -65,6 +65,9 @@ PIG-5251: Bump joda-time to 2.9.9 (dbist13 via rohini)
 OPTIMIZATIONS
  
 BUG FIXES
+
+PIG-5335: Error message from range projection completely misleading (knoguchi)
+
 PIG-5333: LoadCaster sometimes not set for complex type (knoguchi)
 
 PIG-5328: expressionOperator Divide.equalsZero(DataType.BIGDECIMAL) is invalid (michaelthoward via knoguchi)
